--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^3.10.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.5",
     "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
