--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -41,6 +42,7 @@
     "typescript": "^4.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/jest": "^26.0.20",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
